compiler/test/parse-err/return-wrong-type.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func ReturnWrongType() -> int {
    // expected-error@below{{return type mismatch: expected int, but got real}}
    return real(3.14);
}
